<resources>
    <string name="app_name">NordLuxDemo</string>
    <string name="shower_str11">其他方式绑定</string>
    <string name="shower_str12">停止搜索</string>
    <string name="shower_str4">搜索中</string>
    <string name="shower_str5">未绑定</string>
    <string name="shower_str6">搜索终止</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="no_file">No file selected</string>
    <string name="no_progress">""</string>
    <string name="no_action">No action</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">SCAN</string>
    <string name="menu_stop">STOP</string>

    <string name="menu_reset">RESET</string>

    <string name="menu_add">ADD</string>
</resources>